--- a/CookPopularControl/Themes/LabelStyle.xaml
+++ b/CookPopularControl/Themes/LabelStyle.xaml
@@ -2,7 +2,8 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:toolConverters="clr-namespace:CookPopularControl.Tools.Windows.Converters"
                     xmlns:assistant="clr-namespace:CookPopularControl.Controls.Labels"
-                    xmlns:attached="clr-namespace:CookPopularControl.Communal.Attached">
+                    xmlns:attached="clr-namespace:CookPopularControl.Communal.Attached"
+                    xmlns:border="clr-namespace:CookPopularControl.Controls.Borders">
 
     <Style x:Key="DefaultLabelStyle" TargetType="{x:Type Label}">
         <Setter Property="Height" Value="30" />
@@ -12,13 +13,16 @@
         <Setter Property="HorizontalContentAlignment" Value="Center" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="FocusVisualStyle" Value="{DynamicResource FocusVisual}" />
+        <Setter Property="border:BorderAssistant.IsCircular" Value="False" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Label}">
-                    <Border x:Name="PART_Root" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" 
-                            Background="{TemplateBinding Background}" SnapsToDevicePixels="True" Style="{DynamicResource BorderCircularStyle}">
-                        <StackPanel Orientation="Horizontal">
-                            <Border x:Name="HeaderBorder" Width="{Binding ActualHeight,RelativeSource={RelativeSource Self}}" Background="{DynamicResource PrimaryColorTheme}" Style="{DynamicResource BorderCircularClipStyle}">
+                    <Border x:Name="PART_Root" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}"
+                            CornerRadius="{TemplateBinding assistant:LabelAssistant.CornerRadius}"
+                            Background="{TemplateBinding Background}" SnapsToDevicePixels="True" >
+                        <StackPanel Orientation="Horizontal" >
+                            <Border x:Name="HeaderBorder" Width="{Binding ActualHeight,RelativeSource={RelativeSource Self}}" 
+                                    Background="{DynamicResource PrimaryColorTheme}" Style="{DynamicResource BorderCircularClipStyle}">
                                 <ContentPresenter Content="{TemplateBinding assistant:LabelAssistant.Header}"
                                                   ContentTemplate="{TemplateBinding assistant:LabelAssistant.HeaderTemplate}"
                                                   ContentTemplateSelector="{TemplateBinding assistant:LabelAssistant.HeaderTemplateSelector}" 
@@ -51,7 +55,8 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Label}">
                     <Border x:Name="PART_Root" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" 
-                            Background="{TemplateBinding Background}" SnapsToDevicePixels="True" Style="{DynamicResource BorderCircularStyle}">
+                            CornerRadius="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type assistant:GroupLabel}},Path=(assistant:LabelAssistant.CornerRadius)}"
+                            Background="{TemplateBinding Background}" SnapsToDevicePixels="True">
                         <StackPanel Orientation="Horizontal">
                             <Border x:Name="HeaderBorder" Width="{Binding ActualHeight,RelativeSource={RelativeSource Self}}" Background="{DynamicResource PrimaryColorTheme}" Style="{DynamicResource BorderCircularClipStyle}">
                                 <ContentPresenter Content="{Binding RelativeSource={RelativeSource Mode=TemplatedParent},Path=Content.Header}"
@@ -92,7 +97,6 @@
     </Style>
 
     <Style x:Key="DefaultGroupLabelStyle" TargetType="{x:Type assistant:GroupLabel}">
-        <Setter Property="attached:FrameworkElementBaseAttached.CornerRadius" Value="5"/>
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled" />
         <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto" />
         <Setter Property="ItemContainerStyle" Value="{StaticResource GroupLabelItemStyle}"/>
@@ -100,6 +104,8 @@
         <Setter Property="BorderBrush" Value="{DynamicResource FieldBorderBrush}"/>
         <Setter Property="Padding" Value="5" />
         <Setter Property="HasCloseButton" Value="True" />
+        <Setter Property="attached:FrameworkElementBaseAttached.CornerRadius" Value="0"/>
+        <Setter Property="assistant:LabelAssistant.CornerRadius" Value="5"/>
         <Setter Property="ItemsPanel">
             <Setter.Value>
                 <ItemsPanelTemplate>
@@ -110,7 +116,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type assistant:GroupLabel}">
-                    <Border CornerRadius="{Binding Path=(attached:FrameworkElementBaseAttached.CornerRadius),RelativeSource={RelativeSource TemplatedParent}}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}">
+                    <Border CornerRadius="{TemplateBinding attached:FrameworkElementBaseAttached.CornerRadius}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}">
                         <ScrollViewer Focusable="false" HorizontalScrollBarVisibility="{TemplateBinding ScrollViewer.HorizontalScrollBarVisibility}"
                                       VerticalScrollBarVisibility="{TemplateBinding ScrollViewer.VerticalScrollBarVisibility}">
                             <ItemsPresenter SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
