--- a/CookPopularControl/Themes/NotifyStyle.xaml
+++ b/CookPopularControl/Themes/NotifyStyle.xaml
@@ -28,7 +28,7 @@
         <MenuItem Header="欢迎你，写代码的厨子😀"/>
     </ContextMenu>
 
-    <Style x:Key="BubbleMessageStyle" TargetType="{x:Type ContentControl}">
+    <Style x:Key="BubbleMessageStyle" TargetType="{x:Type notify:BubbleMessage}">
         <Setter Property="Width" Value="300" />
         <Setter Property="MinHeight" Value="60" />
         <Setter Property="BorderBrush" Value="Transparent" />
@@ -42,7 +42,7 @@
         <Setter Property="attached:FrameworkElementBaseAttached.CornerRadius" Value="5" />
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type ContentControl}">
+                <ControlTemplate TargetType="{x:Type notify:BubbleMessage}">
                     <AdornerDecorator CacheMode="{DynamicResource DefaultBitmapCache}" SnapsToDevicePixels="True">
                         <Grid Margin="{TemplateBinding Padding}">
                             <Grid.ColumnDefinitions>
