--- a/CookPopularControl/Themes/OtherControlsStyle.xaml
+++ b/CookPopularControl/Themes/OtherControlsStyle.xaml
@@ -4,6 +4,7 @@
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/AlertorStyle.xaml" />
 
+        <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/BadgeStyle.xaml" />
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/BranchStyle.xaml" />
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/DropZoneStyle.xaml" />
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/LayoutStyle.xaml" />
