--- a/CookPopularControl/Themes/CookColors/BaseColor.xaml
+++ b/CookPopularControl/Themes/CookColors/BaseColor.xaml
@@ -1,14 +1,28 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Color x:Key="PrimaryThemeColor">#1E90FF</Color>
-    <Color x:Key="AssistantThemeColor">#FF5722</Color>
     <Color x:Key="PrimaryForegroundColor">#4A4A4A</Color>
     <Color x:Key="AssistantForegroundColor">#FFFFFF</Color>
-    <SolidColorBrush x:Key="PrimaryThemeBrush" Color="{StaticResource PrimaryThemeColor}" />
-    <SolidColorBrush x:Key="AssistantThemeBrush" Color="{StaticResource AssistantThemeColor}" />
+    <Color x:Key="PrimaryBackgroundColor">#FFFFFF</Color>
+    <Color x:Key="AssistantBackgroundColoc">#E8E9EA</Color>
     <SolidColorBrush x:Key="PrimaryForegroundBrush" Color="{StaticResource PrimaryForegroundColor}" />
     <SolidColorBrush x:Key="AssistantForegroundBrush" Color="{StaticResource AssistantForegroundColor}" />
+    <SolidColorBrush x:Key="PrimaryBackgroundBrush" Color="{StaticResource PrimaryBackgroundColor}" />
+    <SolidColorBrush x:Key="AssistantBackgroundBrush" Color="{StaticResource AssistantBackgroundColoc}" />
+
+    
+    
+    
+    <!--**********以下不变的***********-->
+    
+    <SolidColorBrush x:Key="FieldBorderBrush" Color="{x:Static SystemColors.ActiveBorderColor}" />
+    <SolidColorBrush x:Key="FieldPlaceHolderBrush" Color="#D3D3D3" />
+    <SolidColorBrush x:Key="FieldValidationErrorBrush" Color="#FF1F1F" />
+
+    <Color x:Key="BlockColor">#554A4A4A</Color>
+    <Color x:Key="UnEnabledColor">#D3D3D3</Color>
+    <SolidColorBrush x:Key="BlockBrush" Color="{StaticResource BlockColor}" />
+    <SolidColorBrush x:Key="UnEnabledBrush" Color="{StaticResource UnEnabledColor}" />
 
     <Color x:Key="MessageDialogSuccessColor">#32AA32</Color>
     <Color x:Key="MessageDialogInfoColor">#1E90FF</Color>
@@ -22,32 +36,6 @@
     <SolidColorBrush x:Key="MessageDialogErrorBrush" Color="{StaticResource MessageDialogErrorColor}" />
     <SolidColorBrush x:Key="MessageDialogFatalBrush" Color="{StaticResource MessageDialogFatalColor}" />
     <SolidColorBrush x:Key="MessageDialogQuestionBrush" Color="{StaticResource MessageDialogQuestionColor}" />
-
-    <!--  #FF9C8844  -->
-    <Color x:Key="ButtonBaseMouseOverColor">#55AAFF</Color>
-    <Color x:Key="ButtonBasePressColor">#4169E1</Color>
-    <Color x:Key="BorderBrushColor">#4285F4</Color>
-    <SolidColorBrush x:Key="ButtonBaseMouseOverBackground" Color="{StaticResource ButtonBaseMouseOverColor}" />
-    <SolidColorBrush x:Key="ButtonBasePressBackground" Color="{StaticResource ButtonBasePressColor}" />
-    <SolidColorBrush x:Key="BorderBrush" Color="{StaticResource BorderBrushColor}" />
-
-    <SolidColorBrush x:Key="FieldBorderBrush" Color="{x:Static SystemColors.ActiveBorderColor}" />
-    <SolidColorBrush x:Key="FieldPlaceHolderBrush" Color="#D3D3D3" />
-    <SolidColorBrush x:Key="FieldValidationErrorBrush" Color="#FF1F1F" />
-
-    <Color x:Key="DataGirdCellFocusedColor">#FF5722</Color>
-    <Color x:Key="DataGridRowSelectedColor">#1E90FF</Color>
-    <Color x:Key="DataGridRowMouseOverColor">#55AAFF</Color>
-    <Color x:Key="DataGridRowMouseOverSelected">#4169E1</Color>
-
-    <Color x:Key="BlockColor">#554A4A4A</Color>
-    <Color x:Key="UnEnabledColor">#D3D3D3</Color>
-    <Color x:Key="DefaultBackgroundColor">#FFFFFF</Color>
-    <Color x:Key="AssistantBackgroundColoc">#E8E9EA</Color>
-    <SolidColorBrush x:Key="BlockBrush" Color="{StaticResource BlockColor}" />
-    <SolidColorBrush x:Key="UnEnabledBrush" Color="{StaticResource UnEnabledColor}" />
-    <SolidColorBrush x:Key="DefaultBackgroundBrush" Color="{StaticResource DefaultBackgroundColor}" />
-    <SolidColorBrush x:Key="AssistantBackgroundBrush" Color="{StaticResource AssistantBackgroundColoc}" />
 
     <LinearGradientBrush x:Key="LinearThemeBrush" StartPoint="0,0" EndPoint="1,1">
         <GradientStopCollection>
@@ -77,7 +65,6 @@
             <GradientStop Offset="1.0000" Color="#FF00" />
         </GradientStopCollection>
     </LinearGradientBrush>
-
     <LinearGradientBrush x:Key="OrangeLinearGradientBrush" StartPoint="0,0" EndPoint="1,1">
         <GradientStopCollection>
             <GradientStop Offset="0.0000" Color="#0FA0" />
@@ -98,7 +85,6 @@
             <GradientStop Offset="1.0000" Color="#FFA0" />
         </GradientStopCollection>
     </LinearGradientBrush>
-
     <LinearGradientBrush x:Key="YellowLinearGradientBrush" StartPoint="0,0" EndPoint="1,1">
         <GradientStopCollection>
             <GradientStop Offset="0.0000" Color="#0FF0" />
@@ -119,7 +105,6 @@
             <GradientStop Offset="1.0000" Color="#FFF0" />
         </GradientStopCollection>
     </LinearGradientBrush>
-
     <LinearGradientBrush x:Key="GreenLinearGradientBrush" StartPoint="0,0" EndPoint="1,1">
         <GradientStopCollection>
             <GradientStop Offset="0.0000" Color="#00F0" />
@@ -140,7 +125,6 @@
             <GradientStop Offset="1.0000" Color="#F0F0" />
         </GradientStopCollection>
     </LinearGradientBrush>
-
     <LinearGradientBrush x:Key="CyanLinearGradientBrush" StartPoint="0,0" EndPoint="1,1">
         <GradientStopCollection>
             <GradientStop Offset="0.0000" Color="#00FF" />
@@ -161,7 +145,6 @@
             <GradientStop Offset="1.0000" Color="#F0FF" />
         </GradientStopCollection>
     </LinearGradientBrush>
-
     <LinearGradientBrush x:Key="BlueLinearGradientBrush" StartPoint="0,0" EndPoint="1,1">
         <GradientStopCollection>
             <GradientStop Offset="0.0000" Color="#000F" />
@@ -182,7 +165,6 @@
             <GradientStop Offset="1.0000" Color="#F00F" />
         </GradientStopCollection>
     </LinearGradientBrush>
-
     <LinearGradientBrush x:Key="PurpleLinearGradientBrush" StartPoint="0,0" EndPoint="1,1">
         <GradientStopCollection>
             <GradientStop Offset="0.0000" Color="#0F0F" />
